# ProperPackagePaths

./: .flake8  do  pyproject.toml
fake_code_for_tests/: mock_target.py  sibling_import.py
fake_code_for_tests/submodule/: submodule_import.py
properpackagepaths/: foo.py  the_real_stuff.py  util.py
tests/: foo_test.py
