[tool.poetry]
name = "properpackagepaths"
version = "0.1.0"
description = ""
authors = ["Kjeld Schmidt <contact@kjeld-schmidt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
python = "^3.11"
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
flake8-isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
