[tool.poetry]
name = "properpackagepaths"
version = "0.1.0"
description = ""
authors = ["Kjeld Schmidt <contact@kjeld-schmidt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
python = "^3.11"
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
packages="fake_code_for_tests,properpackagepaths,tests"
check_untyped_defs=true
disallow_untyped_defs=true
disallow_incomplete_defs=true
disallow_untyped_decorators=true
no_implicit_optional=true
implicit_reexport=true
warn_return_any=true
warn_unreachable=true
strict_equality=true
strict=true
show_error_context=true
explicit_package_bases=true
pretty=true
